--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@contentful/rich-text-react-renderer": "^14.1.2",
     "@contentful/rich-text-types": "^14.1.2",
     "contentful": "^8.1.1",
+    "highlight.js": "^10.4.1",
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
