--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "sass": "^1.30.0"
+    "sass": "^1.30.0",
+    "swr": "^0.3.9"
   }
 }
