--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,13 @@
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    //
+    "typeRoots": [
+      "./node_modules/@types",
+      "./@types"
+    ]
+    //
   },
   "include": [
     "next-env.d.ts",
