--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "contentful-typescript-codegen": "contentful-typescript-codegen --output codegen/contentful.d.ts"
   },
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^14.1.2",
@@ -14,8 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
     "contentful": "^8.1.1",
+    "contentful-management": "^7.5.0",
+    "dotenv": "^8.2.0",
     "highlight.js": "^10.4.1",
     "next": "10.0.3",
+    "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "sass": "^1.30.0",
@@ -24,6 +28,7 @@
   "devDependencies": {
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
+    "contentful-typescript-codegen": "^3.2.1",
     "typescript": "^4.1.2"
   }
 }
