--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "analyze": "cross-env ANALYZE=true next build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -26,9 +27,11 @@
     "swr": "^0.3.9"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^10.0.3",
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
     "contentful-typescript-codegen": "^3.2.1",
+    "cross-env": "^7.0.3",
     "typescript": "^4.1.2"
   }
 }
